; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote-fileio.c_remote_fileio_request.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote-fileio.c_remote_fileio_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@remote_fio_ctrl_c_flag = common dso_local global i64 0, align 8
@remote_fio_no_longjmp = common dso_local global i64 0, align 8
@uiout = common dso_local global i32 0, align 4
@do_remote_fileio_request = common dso_local global i32 0, align 4
@RETURN_MASK_ALL = common dso_local global i32 0, align 4
@FILEIO_ENOSYS = common dso_local global i32 0, align 4
@FILEIO_EINTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @remote_fileio_request(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = call i32 (...) @remote_fileio_sig_init()
  store i64 0, i64* @remote_fio_ctrl_c_flag, align 8
  store i64 0, i64* @remote_fio_no_longjmp, align 8
  %5 = load i32, i32* @uiout, align 4
  %6 = load i32, i32* @do_remote_fileio_request, align 4
  %7 = load i8*, i8** %2, align 8
  %8 = load i32, i32* @RETURN_MASK_ALL, align 4
  %9 = call i32 @catch_exceptions(i32 %5, i32 %6, i8* %7, i32* null, i32 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  switch i32 %10, label %17 [
    i32 129, label %11
    i32 128, label %14
  ]

11:                                               ; preds = %1
  %12 = load i32, i32* @FILEIO_ENOSYS, align 4
  %13 = call i32 @remote_fileio_reply(i32 -1, i32 %12)
  br label %18

14:                                               ; preds = %1
  %15 = load i32, i32* @FILEIO_EINTR, align 4
  %16 = call i32 @remote_fileio_reply(i32 -1, i32 %15)
  br label %18

17:                                               ; preds = %1
  br label %18

18:                                               ; preds = %17, %14, %11
  %19 = call i32 (...) @remote_fileio_sig_exit()
  ret void
}

declare dso_local i32 @remote_fileio_sig_init(...) #1

declare dso_local i32 @catch_exceptions(i32, i32, i8*, i32*, i32) #1

declare dso_local i32 @remote_fileio_reply(i32, i32) #1

declare dso_local i32 @remote_fileio_sig_exit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
